sm-gitops-istio/demo/servicemesh-node-gw.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"Gateway","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"servicemesh-full-node-a","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"sm-component","app.kubernetes.io/version":"1.16.0","helm.sh/chart":"sm-component-0.1.0"},"name":"servicemesh-node","namespace":"servicemesh"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["servicemesh-node-istio-system.apps.rosa.rosa-5lldq.vmzc.p3.open [...]
    creationTimestamp: "2025-03-24T22:57:54Z"
    generation: 2
    labels:
      app.kubernetes.io/instance: servicemesh-full-node-a
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: sm-component
      app.kubernetes.io/version: 1.16.0
      helm.sh/chart: sm-component-0.1.0
    name: servicemesh-node
    namespace: servicemesh
    resourceVersion: "188414"
    uid: 2041d02d-a188-4103-bb9f-3df18598f711
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - servicemesh-node-istio-system.apps.rosa.rosa-5lldq.vmzc.p3.openshiftapps.com
      port:
        name: http
        number: 80
        protocol: HTTP
kind: List
metadata:
  resourceVersion: ""
